syntax = "proto3";

option csharp_namespace = "Core_gRPC_ServerStreamingTemplate_Client";

package message;


service Message {
  rpc GetMessage(MessageRequest) returns (stream MessageResponse);
}
message MessageRequest {
  string message = 1;
}
message MessageResponse {
  string message = 1;
}